# faculty-appraisal-system

./: .env.example  .gitignore  manage.py  pyproject.toml
appraisal_form_injestion/: apps.py  item_schema.json  urls.py  utils.py  views.py
appraisal_form_injestion/clients/: data_injestion_mongo_client.py
appraisal_form_injestion/services/: data_injestion_service.py
common/clients/: abstract_mongo_client.py
faculty_admin/: apps.py
faculty_admin/clients/: faculty_data_mongo_client.py
faculty_apprasial_system/: asgi.py  settings.py  urls.py  wsgi.py
jiit-portal/: README.md  package.json
jiit-portal/app/: globals.css  layout.tsx
jiit-portal/app/appraisal/11-conference-events/: page.tsx
jiit-portal/app/appraisal/12-1-lectures-tutorials/: page.tsx
jiit-portal/app/appraisal/12-2-reading-material/: page.tsx
jiit-portal/app/appraisal/12-3-4-project-guidance-and-exam-duties/: page.tsx
jiit-portal/app/appraisal/13-student-activities/: page.tsx
jiit-portal/app/appraisal/14-research-papers/: page.tsx
jiit-portal/app/appraisal/15-books-chapters/: page.tsx
jiit-portal/app/appraisal/16-research-projects/: page.tsx
jiit-portal/app/appraisal/17-research-guidance/: page.tsx
jiit-portal/app/dashboard/: page.tsx
jiit-portal/app/login/: page.tsx
jiit-portal/components/: AppraisalLayout.tsx
jiit-portal/components/ui/: sonner.tsx  textarea.tsx  toaster.tsx  use-toast.ts
jiit-portal/hooks/: use-mobile.tsx
jiit-portal/lib/: api.ts  constants.ts  localStorage.ts  mockApi.ts  types.ts
jiit-portal/libs/: types.ts
(+15 files in other folders)
